# fucheck

./: AUTHORS  MANUAL  Makefile  Makefile.in  Makefile.old  README  README.md  config.h.in  configure  configure.ac  createTarGz.sh  fucheck.c  generateTextManual.sh  rts.xml
man/: Makefile.am  Makefile.in  fucheck.1
src/: Makefile.am  Makefile.in  fucheck.c
